--- a/index.html
+++ b/index.html
@@ -3354,7 +3354,7 @@ let BOUDAI_NEW = [
   {w:'あせみ',k:'あせみ',parent:'馬酔木の花',type:'boudai'},
   {w:'松葉独活',k:'まつばうど',parent:'アスパラガス',type:'boudai'},
   {w:'オランダ雉隠し',k:'おらんだきじかくし',parent:'アスパラガス',type:'boudai'},
-  {w:'吾妻菊',k:'',parent:'東菊',type:'boudai'},
+  {w:'吾妻菊',k:'あずまぎく',parent:'東菊',type:'boudai'},
   {w:'畔塗',k:'あぜぬり',parent:'畦塗',type:'boudai'},
   {w:'塗畦',k:'ぬりあぜ',parent:'畦塗',type:'boudai'},
   {w:'ぬくし',k:'ぬくし',parent:'暖か',type:'boudai'},
@@ -3937,7 +3937,7 @@ let BOUDAI_NEW = [
 {w:'種浸ける',k:'たねつける',parent:'種浸し',type:'boudai'},
 {w:'種ふせる',k:'たねふせる',parent:'種浸し',type:'boudai'},
 {w:'籾浸ける',k:'もみつける',parent:'種浸し',type:'boudai'},
-{w:'種井',k:'たねい・たない',parent:'種浸し',type:'boudai'},
+{w:'種井',k:'たねい／たない',parent:'種浸し',type:'boudai'},
 {w:'種俵',k:'たねだわら',parent:'種浸し',type:'boudai'},
 {w:'種池',k:'たないけ',parent:'種浸し',type:'boudai'},
 {w:'種下し',k:'たねおろし',parent:'種蒔',type:'boudai'},
@@ -4024,17 +4024,17 @@ let BOUDAI_NEW = [
 {w:'田楽刺',k:'でんがくざし',parent:'田楽',type:'boudai'},
   {w:'青き踏む',k:'あおきふむ',parent:'踏青',type:'boudai'},
   {w:'蝋弁花',k:'',parent:'土佐水木',type:'boudai'},
-  {w:'闘鶏',k:'',parent:'鶏合',type:'boudai'},
-  {w:'鶏の蹴合',k:'',parent:'鶏合',type:'boudai'},
-  {w:'勝鶏',k:'',parent:'鶏合',type:'boudai'},
-  {w:'負鶏',k:'',parent:'鶏合',type:'boudai'},
-  {w:'小鳥帰る',k:'',parent:'鳥帰る',type:'boudai'},
-  {w:'鳥引く',k:'',parent:'鳥帰る',type:'boudai'},
-  {w:'引鳥',k:'',parent:'鳥帰る',type:'boudai'},
-  {w:'鳥雲に',k:'とりくもに',parent:'鳥雲に入る',type:'boudai'},
-  {w:'雲に入る鳥',k:'くもにいるとり',parent:'鳥雲に入る',type:'boudai'},
-  {w:'鳥曇',k:'',parent:'鳥曇',type:'boudai'},
-  {w:'鳥風',k:'',parent:'鳥曇',type:'boudai'},
+ {w:'闘鶏',k:'とうけい',parent:'鶏合',type:'boudai'},
+{w:'鶏の蹴合',k:'とりのけあい',parent:'鶏合',type:'boudai'},
+{w:'勝鶏',k:'かちどり',parent:'鶏合',type:'boudai'},
+{w:'負鶏',k:'まけどり',parent:'鶏合',type:'boudai'},
+{w:'小鳥帰る',k:'ことりかえる',parent:'鳥帰る',type:'boudai'},
+{w:'鳥引く',k:'ことりひく',parent:'鳥帰る',type:'boudai'},
+{w:'引鳥',k:'ひきどり',parent:'鳥帰る',type:'boudai'},
+{w:'鳥雲に',k:'とりくもに',parent:'鳥雲に入る',type:'boudai'},
+{w:'雲に入る鳥',k:'くもにいるとり',parent:'鳥雲に入る',type:'boudai'},
+{w:'鳥曇',k:'とりぐもり',parent:'鳥曇',type:'boudai'},
+{w:'鳥風',k:'ちょうふう',parent:'鳥曇',type:'boudai'},
   {w:'鳥交む',k:'とりつるむ',parent:'鳥交る',type:'boudai'},
   {w:'孕鳥',k:'はらみどり',parent:'鳥交る',type:'boudai'},
   {w:'鳥の恋',k:'とりのこい',parent:'鳥交る',type:'boudai'},
@@ -4529,7 +4529,7 @@ let BOUDAI_NEW = [
 {w:'花ミモザ',k:'はなみもざ',parent:'ミモザ',type:'boudai'},
 {w:'麦を踏む',k:'むぎをふむ',parent:'麦踏',type:'boudai'},
 {w:'柳むし',k:'やなぎむしがれい',parent:'蒸鰈',type:'boudai'},
-{w:'柳むしがれひ',k:'やなぎむしがれい',parent:'蒸鰈',type:'boudai'},
+{w:'柳むしがれひ',k:'やなぎむし',parent:'蒸鰈',type:'boudai'},
 {w:'むつ',k:'むつ',parent:'鯥五郎',type:'boudai'},
 {w:'むつ掘る',k:'むつほる',parent:'鯥五郎',type:'boudai'},
 {w:'むつ掛',k:'むつかけ',parent:'鯥五郎',type:'boudai'},
@@ -4549,10 +4549,10 @@ let BOUDAI_NEW = [
   {w:'木蓮華',k:'もくれんげ',parent:'木蓮',type:'boudai'},
   {w:'水雲',k:'もずく',parent:'海雲',type:'boudai'},
 {w:'胡瓜蒔く',k:'きゅうりまく',parent:'物種蒔く',type:'boudai'},
-{w:'南瓜蒔く',k:'かぼちゃまく・とうなすまく',parent:'物種蒔く',type:'boudai'},
+{w:'南瓜蒔く',k:'かぼちゃまく／とうなすまく',parent:'物種蒔く',type:'boudai'},
 {w:'糸瓜蒔く',k:'へちままく',parent:'物種蒔く',type:'boudai'},
 {w:'西瓜蒔く',k:'すいかまく',parent:'物種蒔く',type:'boudai'},
-{w:'茄子蒔く',k:'なすびまく・なすまく',parent:'物種蒔く',type:'boudai'},
+{w:'茄子蒔く',k:'なすびまく／なすまく',parent:'物種蒔く',type:'boudai'},
 {w:'物芽',k:'ものめ',parent:'ものの芽',type:'boudai'},
 {w:'菖蒲の芽',k:'しょうぶのめ',parent:'ものの芽',type:'boudai'},
 {w:'芍薬の芽',k:'しゃくやくのめ',parent:'ものの芽',type:'boudai'},
@@ -4564,12 +4564,12 @@ let BOUDAI_NEW = [
 {w:'桃の日',k:'もものひ',parent:'雛祭',type:'boudai'},
 {w:'白桃',k:'しらもも',parent:'桃の花',type:'boudai'},
 {w:'緋桃',k:'ひもも',parent:'桃の花',type:'boudai'},
-{w:'諸子魚',k:'もろこ・もろこうお',parent:'諸子',type:'boudai'},
+{w:'諸子魚',k:'もろこ／もろこうお',parent:'諸子',type:'boudai'},
 {w:'諸子はえ',k:'もろこはえ',parent:'諸子',type:'boudai'},
 {w:'初諸子',k:'はつもろこ',parent:'諸子',type:'boudai'},
 {w:'柳諸子',k:'やなぎもろこ',parent:'諸子',type:'boudai'},
 {w:'焼野原',k:'やけのはら',parent:'焼野',type:'boudai'},
-{w:'焼原',k:'おぎのやけはら',parent:'焼野',type:'boudai'},
+{w:'焼原',k:'やけはら',parent:'焼野',type:'boudai'},
 {w:'末黒野',k:'すぐろの',parent:'焼野',type:'boudai'},
 {w:'末黒',k:'おぎのすぐろ',parent:'焼野',type:'boudai'},
 {w:'招魂祭',k:'しょうこんさい',parent:'靖国祭',type:'boudai'},
@@ -4592,8 +4592,10 @@ let BOUDAI_NEW = [
 {w:'若柳',k:'わかやぎ',parent:'柳',type:'boudai'},
 {w:'芽柳',k:'めやなぎ',parent:'柳の芽',type:'boudai'},
 {w:'芽ばり柳',k:'めばりやなぎ',parent:'柳の芽',type:'boudai'},
+{w:'花の冷え',k:'はなのひえ',parent:'花冷',type:'boudai'},
+{w:'桜冷',k:'さくらびえ',parent:'花冷',type:'boudai'},
 {w:'はえ',k:'はえ',parent:'柳鮠',type:'boudai'},
-{w:'はや',k:'はやまぶき',parent:'柳鮠',type:'boudai'},
+{w:'はや',k:'はや',parent:'柳鮠',type:'boudai'},
 {w:'葺替',k:'ふきかえ',parent:'屋根替',type:'boudai'},
 {w:'屋根葺く',k:'やねふく',parent:'屋根替',type:'boudai'},
 {w:'面影草',k:'おもかげぐさ',parent:'山吹',type:'boudai'},
@@ -4602,7 +4604,7 @@ let BOUDAI_NEW = [
 {w:'濃山吹',k:'こやまぶき',parent:'山吹',type:'boudai'},
 {w:'葉山吹',k:'はやまぶき',parent:'山吹',type:'boudai'},
 {w:'草山吹',k:'くさやまぶき',parent:'山吹草',type:'boudai'},
-{w:'山焼',k:'おやまやき',parent:'山焼く',type:'boudai'},
+{w:'山焼',k:'やまやき',parent:'山焼く',type:'boudai'},
 {w:'焼山',k:'やけやま',parent:'山焼く',type:'boudai'},
 {w:'山火',k:'さんか',parent:'山焼く',type:'boudai'},
 {w:'笑ふ山',k:'わらうやま',parent:'山笑ふ',type:'boudai'},
@@ -4678,7 +4680,7 @@ let BOUDAI_NEW = [
 {w:'上り鮎',k:'のぼりあゆ',parent:'若鮎',type:'boudai'},
 {w:'嫩草',k:'わかくさ',parent:'若草',type:'boudai'},
 {w:'初草',k:'はつくさ',parent:'若草',type:'boudai'},
-{w:'新草',k:'ごいっしんぐさ',parent:'若草',type:'boudai'},
+{w:'新草',k:'にいくさ',parent:'若草',type:'boudai'},
 {w:'若草野',k:'わかくさの',parent:'若草',type:'boudai'},
 {w:'桜魚',k:'さくらうお',parent:'公魚',type:'boudai'},
 {w:'公魚漁',k:'わかさぎりょう',parent:'公魚',type:'boudai'},
@@ -4692,7 +4694,7 @@ let BOUDAI_NEW = [
 {w:'松の芯',k:'まつのしん',parent:'若緑',type:'boudai'},
 {w:'松の緑',k:'まつのみどり',parent:'若緑',type:'boudai'},
 {w:'和布',k:'わかめ',parent:'若布',type:'boudai'},
-{w:'若布刈',k:'わかめかり・わかめがり',parent:'若布',type:'boudai'},
+{w:'若布刈',k:'わかめかり／わかめがり',parent:'若布',type:'boudai'},
 {w:'若布刈舟',k:'めかりぶね',parent:'若布',type:'boudai'},
 {w:'忘れ霜',k:'わすれじも',parent:'別れ霜',type:'boudai'},
 {w:'霜の名残',k:'しものなごり',parent:'別れ霜',type:'boudai'},
@@ -5245,8 +5247,8 @@ let BOUDAI_NEW = [
   {w:'喜雨亭忌',k:'',parent:'秋櫻子忌',type:'boudai'},
   {w:'紫陽花忌',k:'',parent:'秋櫻子忌',type:'boudai'},
   {w:'群青忌',k:'',parent:'秋櫻子忌',type:'boudai'},
-  {w:'寺山忌',k:'',parent:'修司忌',type:'boudai'},
-  {w:'修司の忌',k:'',parent:'修司忌',type:'boudai'},
+  {w:'寺山忌',k:'てらやまき',parent:'修司忌',type:'boudai'},
+  {w:'修司の忌',k:'しゅうじのき',parent:'修司忌',type:'boudai'},
   {w:'達谷忌',k:'',parent:'楸邨忌',type:'boudai'},
   {w:'椶櫚の花',k:'',parent:'棕櫚の花',type:'boudai'},
   {w:'泡盛',k:'',parent:'焼酎',type:'boudai'},
@@ -7944,8 +7946,8 @@ let BOUDAI_NEW = [
   {w:'蹴鞠始',k:'',parent:'鞠始',type:'boudai'},
   {w:'三河万歳',k:'',parent:'万歳',type:'boudai'},
   {w:'大和万歳',k:'',parent:'万歳',type:'boudai'},
-  {w:'むつみ月',k:'',parent:'睦月',type:'boudai'},
-  {w:'むつび月',k:'',parent:'睦月',type:'boudai'},
+  {w:'むつみ月',k:'むつみづき',parent:'睦月',type:'boudai'},
+  {w:'むつび月',k:'むつびづき',parent:'睦月',type:'boudai'},
   {w:'土竜追',k:'',parent:'土竜打',type:'boudai'},
   {w:'海鼠曳',k:'',parent:'土竜打',type:'boudai'},
   {w:'繭玉',k:'',parent:'餅花',type:'boudai'},
