--- a/index.html
+++ b/index.html
@@ -4528,8 +4528,8 @@ let BOUDAI_NEW = [
 {w:'壬生の面',k:'みぶのめん',parent:'壬生念仏',type:'boudai'},
 {w:'花ミモザ',k:'はなみもざ',parent:'ミモザ',type:'boudai'},
 {w:'麦を踏む',k:'むぎをふむ',parent:'麦踏',type:'boudai'},
-{w:'柳むし',k:'やなぎむしがれい',parent:'蒸鰈',type:'boudai'},
-{w:'柳むしがれひ',k:'やなぎむし',parent:'蒸鰈',type:'boudai'},
+{w:'柳むし',k:'やなぎむし',parent:'蒸鰈',type:'boudai'},
+{w:'柳むしがれひ',k:'やなぎむしがれい',parent:'蒸鰈',type:'boudai'},
 {w:'むつ',k:'むつ',parent:'鯥五郎',type:'boudai'},
 {w:'むつ掘る',k:'むつほる',parent:'鯥五郎',type:'boudai'},
 {w:'むつ掛',k:'むつかけ',parent:'鯥五郎',type:'boudai'},
