--- a/index.html
+++ b/index.html
@@ -863,7 +863,7 @@ let RAW = [
   {w:'凧',k:'たこ／いかのぼり',s:'春',p:'三春',c:'生活'},
   {w:'風船',k:'ふうせん',s:'春',p:'三春',c:'生活'},  
   {w:'風車',k:'かざぐるま',s:'春',p:'三春',c:'生活'},
-  {w:'石鹸玉',k:'しゃぼんだま',s:'春',p:'三春',c:'生活'},
+  {w:'石鹼玉',k:'しゃぼんだま',s:'春',p:'三春',c:'生活'},
   {w:'鞦韆',k:'しゅうせん／ぶらんこ',s:'春',p:'三春',c:'生活'},
   {w:'春の風邪',k:'はるのかぜ',s:'春',p:'三春',c:'生活'},
   {w:'春眠',k:'しゅんみん',s:'春',p:'三春',c:'生活'},
@@ -1307,7 +1307,7 @@ let RAW = [
   {w:'花烏賊',k:'はないか',s:'春',p:'晩春',c:'動物'},
   {w:'海胆',k:'うに',s:'春',p:'晩春',c:'動物'},
   {w:'春の蚊',k:'はるのかも',s:'春',p:'晩春',c:'動物'},
-  {w:'春蝉',k:'はるせみ',s:'春',p:'晩春',c:'動物'},
+  {w:'春蟬',k:'はるせみ',s:'春',p:'晩春',c:'動物'},
   // 晩春・植物
   {w:'桜',k:'さくら',s:'春',p:'晩春',c:'植物'},
   {w:'花',k:'はな',s:'春',p:'晩春',c:'植物'},
@@ -1636,7 +1636,7 @@ let RAW = [
   {w:'水鶏',k:'くいな',s:'夏',p:'三夏',c:'動物'},
   {w:'青鷺',k:'あおさぎ',s:'夏',p:'三夏',c:'動物'},
   {w:'白鷺',k:'しらさぎ',s:'夏',p:'三夏',c:'動物'},
-  {w:'鯵刺',k:'あじさし',s:'夏',p:'三夏',c:'動物'},
+  {w:'鰺刺',k:'あじさし',s:'夏',p:'三夏',c:'動物'},
   {w:'大瑠璃',k:'おおるり',s:'夏',p:'三夏',c:'動物'},
   {w:'三光鳥',k:'さんこうちょう',s:'夏',p:'三夏',c:'動物'},
   {w:'夏燕',k:'なつつばめ',s:'夏',p:'三夏',c:'動物'},
@@ -1652,7 +1652,7 @@ let RAW = [
   {w:'熱帯魚',k:'ねったいぎょ',s:'夏',p:'三夏',c:'動物'},
   {w:'目高',k:'めだか',s:'夏',p:'三夏',c:'動物'},
   {w:'黒鯛',k:'くろだい',s:'夏',p:'三夏',c:'動物'},
-  {w:'鯵',k:'あじ',s:'夏',p:'三夏',c:'動物'},
+  {w:'鰺',k:'あじ',s:'夏',p:'三夏',c:'動物'},
   {w:'鱚',k:'きす',s:'夏',p:'三夏',c:'動物'},
   {w:'べら',k:'べら',s:'夏',p:'三夏',c:'動物'},
   {w:'飛魚',k:'とびうお',s:'夏',p:'三夏',c:'動物'},
@@ -1760,7 +1760,7 @@ let RAW = [
   {w:'豆飯',k:'まめごはん',s:'夏',p:'初夏',c:'生活'},
   {w:'新茶',k:'しんちゃ',s:'夏',p:'初夏',c:'生活'},
   {w:'麦刈',k:'むぎかり',s:'夏',p:'初夏',c:'生活'},
-  {w:'代掻く',k:'しろかく',s:'夏',p:'初夏',c:'生活'},
+  {w:'代搔く',k:'しろかく',s:'夏',p:'初夏',c:'生活'},
   {w:'花火',k:'はなび',s:'夏',p:'初夏',c:'生活'},
   {w:'袷',k:'あわせ',s:'夏',p:'初夏',c:'生活'},
   {w:'セル',k:'せる',s:'夏',p:'初夏',c:'生活'},
@@ -1795,7 +1795,7 @@ let RAW = [
   // 初夏・動物
   {w:'袋角',k:'ふくろづの',s:'夏',p:'初夏',c:'動物'},
   {w:'初鰹',k:'はつかつお',s:'夏',p:'初夏',c:'動物'},
-  {w:'空蝉',k:'うつせみ',s:'夏',p:'初夏',c:'動物'},
+  {w:'空蟬',k:'うつせみ',s:'夏',p:'初夏',c:'動物'},
   // 初夏・植物
   {w:'薔薇',k:'ばら',s:'夏',p:'初夏',c:'植物'},
   {w:'牡丹',k:'ぼたん',s:'夏',p:'初夏',c:'植物'},
@@ -1897,7 +1897,7 @@ let RAW = [
   {w:'早苗饗',k:'さなぶり',s:'夏',p:'仲夏',c:'生活'},
   {w:'菊挿す',k:'きくさす',s:'夏',p:'仲夏',c:'生活'},
   {w:'竹植う',k:'たけうう',s:'夏',p:'仲夏',c:'生活'},
-  {w:'漆掻',k:'うるしかき',s:'夏',p:'仲夏',c:'生活'},
+  {w:'漆搔',k:'うるしかき',s:'夏',p:'仲夏',c:'生活'},
   {w:'蛍籠',k:'ほたるかご',s:'夏',p:'仲夏',c:'生活'},
   // 仲夏・行事
   {w:'時の記念日',k:'ときのきねんび',s:'夏',p:'仲夏',c:'行事'},
@@ -1912,7 +1912,7 @@ let RAW = [
   {w:'鞍馬の竹伐',k:'くらまのたけきり',s:'夏',p:'仲夏',c:'行事'},
   {w:'沖縄忌',k:'おきなわき',s:'夏',p:'仲夏',c:'行事'},
   {w:'鑑真忌',k:'がんじんき',s:'夏',p:'仲夏',c:'行事'},
-  {w:'蝉丸忌',k:'せみまるき',s:'夏',p:'仲夏',c:'行事'},
+  {w:'蟬丸忌',k:'せみまるき',s:'夏',p:'仲夏',c:'行事'},
   {w:'業平忌',k:'なりひらき',s:'夏',p:'仲夏',c:'行事'},
   {w:'楸邨忌',k:'しゅうそんき',s:'夏',p:'仲夏',c:'行事'},
   // 仲夏・動物
@@ -2101,7 +2101,7 @@ let RAW = [
   {w:'不死男忌',k:'ふじおき',s:'夏',p:'晩夏',c:'行事'},
   {w:'草田男忌',k:'くさたおき',s:'夏',p:'晩夏',c:'行事'},
   // 晩夏・動物
-  {w:'蝉',k:'せみ',s:'夏',p:'晩夏',c:'動物'},
+  {w:'蟬',k:'せみ',s:'夏',p:'晩夏',c:'動物'},
   {w:'天牛',k:'かみきりむし',s:'夏',p:'晩夏',c:'動物'},
   {w:'玉虫',k:'たまむし',s:'夏',p:'晩夏',c:'動物'},
   {w:'羽抜鳥',k:'はぬけどり',s:'夏',p:'晩夏',c:'動物'},
@@ -2386,14 +2386,14 @@ let RAW = [
 {w:'鏡花忌',k:'きょうかき',s:'秋',p:'初秋',c:'行事'},
 // 初秋・動物
 {w:'秋の蛍',k:'あきのほたる',s:'秋',p:'初秋',c:'動物'},
-{w:'秋の蝉',k:'あきのせみ',s:'秋',p:'初秋',c:'動物'},
+{w:'秋の蟬',k:'あきのせみ',s:'秋',p:'初秋',c:'動物'},
 {w:'鈴虫',k:'すずむし',s:'秋',p:'初秋',c:'動物'},
 {w:'松虫',k:'まつむし',s:'秋',p:'初秋',c:'動物'},
 {w:'邯鄲',k:'かんたん',s:'秋',p:'初秋',c:'動物'},
 {w:'馬追',k:'うまおい',s:'秋',p:'初秋',c:'動物'},
 {w:'螽斯',k:'きりぎりす',s:'秋',p:'初秋',c:'動物'},
 {w:'蝗',k:'いなご',s:'秋',p:'初秋',c:'動物'},
-{w:'法師蝉',k:'ほうしぜみ',s:'秋',p:'初秋',c:'動物'},
+{w:'法師蟬',k:'ほうしぜみ',s:'秋',p:'初秋',c:'動物'},
 {w:'蜉蝣',k:'かげろう',s:'秋',p:'初秋',c:'動物'},
 {w:'青松虫',k:'あおまつむし',s:'秋',p:'初秋',c:'動物'},
 {w:'草雲雀',k:'くさひばり',s:'秋',p:'初秋',c:'動物'},
@@ -2890,7 +2890,7 @@ let RAW = [
   {w:'毛糸編む',k:'けいとあむ',s:'冬',p:'三冬',c:'生活'},
   {w:'鰭酒',k:'ひれざけ',s:'冬',p:'三冬',c:'生活'},
   {w:'寝酒',k:'ねざけ',s:'冬',p:'三冬',c:'生活'},
-  {w:'蕎麦掻',k:'そばがき',s:'冬',p:'三冬',c:'生活'},
+  {w:'蕎麦搔',k:'そばがき',s:'冬',p:'三冬',c:'生活'},
   {w:'今川焼',k:'いまがわやき',s:'冬',p:'三冬',c:'生活'},
   {w:'薬喰',k:'くすりぐい',s:'冬',p:'三冬',c:'生活'},
   {w:'鯛焼',k:'たいやき',s:'冬',p:'三冬',c:'生活'},
@@ -3262,7 +3262,7 @@ let RAW = [
   {w:'寒卵',k:'かんたまご',s:'冬',p:'晩冬',c:'生活'},
   {w:'凍豆腐',k:'しみどうふ',s:'冬',p:'晩冬',c:'生活'},
   {w:'雪吊',k:'ゆきつり',s:'冬',p:'晩冬',c:'生活'},
-  {w:'雪掻',k:'ゆきかき',s:'冬',p:'晩冬',c:'生活'},
+  {w:'雪搔',k:'ゆきかき',s:'冬',p:'晩冬',c:'生活'},
   {w:'探梅',k:'たんばい',s:'冬',p:'晩冬',c:'生活'},
   {w:'雪達磨',k:'ゆきだるま',s:'冬',p:'晩冬',c:'生活'},
   {w:'胼',k:'ひび',s:'冬',p:'晩冬',c:'生活'},
@@ -3765,7 +3765,7 @@ let BOUDAI_NEW = [
   {w:'紫蜆',k:'むらさきしじみ',parent:'蜆',type:'boudai'},
   {w:'蜆取',k:'しじみとり',parent:'蜆',type:'boudai'},
   {w:'蜆舟',k:'しじみぶね',parent:'蜆',type:'boudai'},
-  {w:'蜆掻',k:'しじみかき',parent:'蜆',type:'boudai'},
+  {w:'蜆搔',k:'しじみかき',parent:'蜆',type:'boudai'},
   {w:'蜆売',k:'しじみうり',parent:'蜆',type:'boudai'},
   {w:'草萌',k:'くさもえ',parent:'下萌',type:'boudai'},
   {w:'草青む',k:'くさあおむ',parent:'下萌',type:'boudai'},
@@ -4146,7 +4146,7 @@ let BOUDAI_NEW = [
   {w:'海苔粗朶',k:'のりそだ',parent:'海苔',type:'boudai'},
   {w:'海苔舟',k:'のりぶね',parent:'海苔',type:'boudai'},
   {w:'海苔採',k:'のりとり',parent:'海苔',type:'boudai'},
-  {w:'海苔掻く',k:'のりかく',parent:'海苔',type:'boudai'},
+  {w:'海苔搔く',k:'のりかく',parent:'海苔',type:'boudai'},
   {w:'海苔干す',k:'のりほす',parent:'海苔',type:'boudai'},
    {w:'萩植う',k:'はぎうう',parent:'根分',type:'boudai'},
   {w:'あさしらげ',k:'あさしらげ',parent:'蘩蔞',type:'boudai'},
@@ -4284,9 +4284,9 @@ let BOUDAI_NEW = [
  {w:'春鹿',k:'はるじか',parent:'春の鹿',type:'boudai'},
 {w:'孕鹿',k:'はらみじか',parent:'春の鹿',type:'boudai'},
 {w:'春霜',k:'しゅんそう／はるしも',parent:'春の霜',type:'boudai'},
-{w:'松蝉',k:'まつぜみ',parent:'春蝉',type:'boudai'},
-{w:'春の蝉',k:'はるのせみ',parent:'春蝉',type:'boudai'},
-{w:'松蝉',k:'まつぜみ',parent:'春蝉',type:'boudai'},
+{w:'松蟬',k:'まつぜみ',parent:'春蟬',type:'boudai'},
+{w:'春の蟬',k:'はるのせみ',parent:'春蟬',type:'boudai'},
+{w:'松蟬',k:'まつぜみ',parent:'春蟬',type:'boudai'},
 {w:'春空',k:'はるぞら',parent:'春の空',type:'boudai'},
 {w:'春天',k:'しゅんてん',parent:'春の空',type:'boudai'},
 {w:'春笋',k:'しゅんじゅん',parent:'春の筍',type:'boudai'},
@@ -4718,29 +4718,29 @@ let BOUDAI_NEW = [
   {w:'蘆茂る',k:'',parent:'青蘆',type:'boudai'},
   {w:'風青し',k:'かぜあおし',parent:'青嵐',type:'boudai'},
   {w:'夏嵐',k:'なつあらし',parent:'青嵐',type:'boudai'},
-  {w:'花葵',k:'',parent:'葵',type:'boudai'},
-  {w:'銭葵',k:'',parent:'葵',type:'boudai'},
-  {w:'蜀葵',k:'',parent:'葵',type:'boudai'},
-  {w:'立葵',k:'',parent:'葵',type:'boudai'},
-  {w:'賀茂祭',k:'',parent:'葵祭',type:'boudai'},
-  {w:'北祭',k:'',parent:'葵祭',type:'boudai'},
-  {w:'賀茂葵',k:'',parent:'葵祭',type:'boudai'},
-  {w:'懸葵',k:'',parent:'葵祭',type:'boudai'},
-  {w:'梅の実',k:'',parent:'青梅',type:'boudai'},
-  {w:'実梅',k:'',parent:'青梅',type:'boudai'},
-  {w:'小梅',k:'',parent:'青梅',type:'boudai'},
-  {w:'柿青し',k:'',parent:'青柿',type:'boudai'},
-  {w:'梧桐',k:'ごとう',parent:'梧桐',type:'boudai'},
-  {w:'生胡桃',k:'',parent:'青胡桃',type:'boudai'},
-  {w:'夏芝',k:'なつしば',parent:'青芝',type:'boudai'},
-  {w:'芒茂る',k:'',parent:'青芒',type:'boudai'},
-  {w:'簾',k:'',parent:'青簾',type:'boudai'},
-  {w:'竹簾',k:'',parent:'青簾',type:'boudai'},
-  {w:'葭簾',k:'',parent:'青簾',type:'boudai'},
-  {w:'伊予簾',k:'',parent:'青簾',type:'boudai'},
-  {w:'絵簾',k:'',parent:'青簾',type:'boudai'},
-  {w:'板簾',k:'',parent:'青簾',type:'boudai'},
-  {w:'古簾',k:'',parent:'青簾',type:'boudai'},
+{w:'花葵',k:'はなあおい',parent:'葵',type:'boudai'},
+{w:'銭葵',k:'ぜにあおい',parent:'葵',type:'boudai'},
+{w:'蜀葵',k:'からあおい',parent:'葵',type:'boudai'},
+{w:'立葵',k:'たちあおい',parent:'葵',type:'boudai'},
+{w:'賀茂祭',k:'かものまつり',parent:'葵祭',type:'boudai'},
+{w:'北祭',k:'きたのまつり',parent:'葵祭',type:'boudai'},
+{w:'賀茂葵',k:'かもあおい',parent:'葵祭',type:'boudai'},
+{w:'懸葵',k:'かけあおい',parent:'葵祭',type:'boudai'},
+{w:'梅の実',k:'うめのみ',parent:'青梅',type:'boudai'},
+{w:'実梅',k:'みうめ',parent:'青梅',type:'boudai'},
+{w:'小梅',k:'こうめ',parent:'青梅',type:'boudai'},
+{w:'柿青し',k:'かきあおし',parent:'青柿',type:'boudai'},
+{w:'梧桐',k:'ごとう',parent:'梧桐',type:'boudai'},
+{w:'生胡桃',k:'なまくるみ',parent:'青胡桃',type:'boudai'},
+{w:'夏芝',k:'なつしば',parent:'青芝',type:'boudai'},
+{w:'芒茂る',k:'すすきしげる',parent:'青芒',type:'boudai'},
+{w:'簾',k:'すだれ',parent:'青簾',type:'boudai'},
+{w:'竹簾',k:'たけすだれ',parent:'青簾',type:'boudai'},
+{w:'葭簾',k:'よしすだれ',parent:'青簾',type:'boudai'},
+{w:'伊予簾',k:'いよすだれ',parent:'青簾',type:'boudai'},
+{w:'絵簾',k:'えすだれ',parent:'青簾',type:'boudai'},
+{w:'板簾',k:'いたすだれ',parent:'青簾',type:'boudai'},
+{w:'古簾',k:'ふるすだれ',parent:'青簾',type:'boudai'},
   {w:'青田風',k:'あおたかぜ',parent:'青田',type:'boudai'},
   {w:'青田波',k:'あおたなみ',parent:'青田',type:'boudai'},
   {w:'青田道',k:'あおたみち',parent:'青田',type:'boudai'},
@@ -4754,33 +4754,33 @@ let BOUDAI_NEW = [
   {w:'青時雨',k:'あおしぐれ',parent:'青葉',type:'boudai'},
   {w:'青葉雨',k:'あおばあめ',parent:'青葉',type:'boudai'},
   {w:'青葉騒',k:'あおばさい',parent:'青葉',type:'boudai'},
-  {w:'青酸漿',k:'',parent:'青鬼灯',type:'boudai'},
-  {w:'えひ',k:'',parent:'赤鱏',type:'boudai'},
-  {w:'えひ',k:'',parent:'赤鱏',type:'boudai'},
-  {w:'しろざ',k:'',parent:'藜',type:'boudai'},
-  {w:'ニセアカシアの花',k:'',parent:'アカシアの花',type:'boudai'},
-  {w:'針槐の花',k:'',parent:'アカシアの花',type:'boudai'},
-  {w:'秋を待つ',k:'あきをまつ',parent:'秋近し',type:'boudai'},
-  {w:'秋隣',k:'あきどなり',parent:'秋近し',type:'boudai'},
-  {w:'大麻',k:'',parent:'麻',type:'boudai'},
-  {w:'麻の葉',k:'',parent:'麻',type:'boudai'},
-  {w:'麻刈',k:'',parent:'麻',type:'boudai'},
-  {w:'麻引',k:'',parent:'麻',type:'boudai'},
-  {w:'麻の花',k:'',parent:'麻',type:'boudai'},
-  {w:'麻畠',k:'',parent:'麻',type:'boudai'},
-  {w:'牽牛花',k:'',parent:'朝顔',type:'boudai'},
-  {w:'蕣',k:'',parent:'朝顔',type:'boudai'},
-  {w:'朝顔の実',k:'',parent:'朝顔',type:'boudai'},
-  {w:'種朝顔',k:'',parent:'朝顔',type:'boudai'},
-  {w:'朝凪ぐ',k:'',parent:'朝凪',type:'boudai'},
-  {w:'真鯵',k:'',parent:'鯵',type:'boudai'},
-  {w:'室鯵',k:'',parent:'鯵',type:'boudai'},
-  {w:'夕鯵',k:'',parent:'鯵',type:'boudai'},
-  {w:'鯵売',k:'',parent:'鯵',type:'boudai'},
+ {w:'青酸漿',k:'あおほおずき',parent:'青鬼灯',type:'boudai'},
+{w:'えひ',k:'えい',parent:'赤鱏',type:'boudai'},
+{w:'えひ',k:'えい',parent:'赤鱏',type:'boudai'},
+{w:'しろざ',k:'しろざ',parent:'藜',type:'boudai'},
+{w:'ニセアカシアの花',k:'にせあかしあのはな',parent:'アカシアの花',type:'boudai'},
+{w:'針槐',k:'はりえんじゅ',parent:'アカシアの花',type:'boudai'},
+{w:'秋を待つ',k:'あきをまつ',parent:'秋近し',type:'boudai'},
+{w:'秋隣',k:'あきどなり',parent:'秋近し',type:'boudai'},
+{w:'大麻',k:'おおあさ',parent:'麻',type:'boudai'},
+{w:'麻の葉',k:'あさのは',parent:'麻',type:'boudai'},
+{w:'麻刈',k:'あさかり',parent:'麻',type:'boudai'},
+{w:'麻引',k:'あまひき',parent:'麻',type:'boudai'},
+{w:'麻の花',k:'あさのはな',parent:'麻',type:'boudai'},
+{w:'麻畑',k:'あさばたけ',parent:'麻',type:'boudai'},
+{w:'牽牛花',k:'けんぎゅうか',parent:'朝顔',type:'boudai'},
+{w:'蕣',k:'あさがお',parent:'朝顔',type:'boudai'},
+{w:'朝顔の実',k:'あさがおのみ',parent:'朝顔',type:'boudai'},
+{w:'種朝顔',k:'たねあさがお',parent:'朝顔',type:'boudai'},
+{w:'朝凪ぐ',k:'あさなぐ',parent:'朝凪',type:'boudai'},
+{w:'真鰺',k:'まあじ',parent:'鰺',type:'boudai'},
+{w:'室鰺',k:'むろあじ',parent:'鰺',type:'boudai'},
+{w:'夕鰺',k:'ゆうあじ',parent:'鰺',type:'boudai'},
+{w:'鰺売',k:'あじうり',parent:'鰺',type:'boudai'},
   {w:'四葩',k:'よひら',parent:'紫陽花',type:'boudai'},
   {w:'七変化',k:'しちへんげ',parent:'紫陽花',type:'boudai'},
-  {w:'鮎刺',k:'',parent:'鯵刺',type:'boudai'},
-  {w:'鮎鷹',k:'',parent:'鯵刺',type:'boudai'},
+  {w:'鮎刺',k:'',parent:'鰺刺',type:'boudai'},
+  {w:'鮎鷹',k:'',parent:'鰺刺',type:'boudai'},
   {w:'汗ばむ',k:'',parent:'汗',type:'boudai'},
   {w:'玉の汗',k:'',parent:'汗',type:'boudai'},
   {w:'汗疹',k:'',parent:'汗',type:'boudai'},
@@ -4907,8 +4907,8 @@ let BOUDAI_NEW = [
   {w:'渋団扇',k:'',parent:'団扇',type:'boudai'},
   {w:'古団扇',k:'',parent:'団扇',type:'boudai'},
   {w:'団扇掛',k:'',parent:'団扇',type:'boudai'},
-  {w:'蝉の殻',k:'',parent:'空蝉',type:'boudai'},
-  {w:'蝉の脱殻',k:'',parent:'空蝉',type:'boudai'},
+  {w:'蟬の殻',k:'',parent:'空蟬',type:'boudai'},
+  {w:'蟬の脱殻',k:'',parent:'空蟬',type:'boudai'},
   {w:'卯の花月',k:'',parent:'卯月',type:'boudai'},
   {w:'皐月波',k:'',parent:'卯波',type:'boudai'},
   {w:'空木の花',k:'',parent:'卯の花',type:'boudai'},
@@ -4925,7 +4925,7 @@ let BOUDAI_NEW = [
   {w:'瓜守',k:'',parent:'瓜番',type:'boudai'},
   {w:'瓜小屋',k:'',parent:'瓜番',type:'boudai'},
   {w:'瓜番小屋',k:'',parent:'瓜番',type:'boudai'},
-  {w:'漆取る',k:'',parent:'漆掻',type:'boudai'},
+  {w:'漆取る',k:'',parent:'漆搔',type:'boudai'},
   {w:'山苣の花',k:'',parent:'えごの花',type:'boudai'},
   {w:'花槐',k:'',parent:'槐の花',type:'boudai'},
   {w:'夏の昼',k:'なつのひる',parent:'炎昼',type:'boudai'},
@@ -5037,7 +5037,7 @@ let BOUDAI_NEW = [
   {w:'毒流し',k:'',parent:'川狩',type:'boudai'},
   {w:'かへぼり',k:'',parent:'川狩',type:'boudai'},
   {w:'瀬干し',k:'',parent:'川狩',type:'boudai'},
-  {w:'川蝉',k:'',parent:'翡翠',type:'boudai'},
+  {w:'川蟬',k:'',parent:'翡翠',type:'boudai'},
   {w:'せうびん',k:'',parent:'翡翠',type:'boudai'},
   {w:'床',k:'',parent:'川床',type:'boudai'},
   {w:'川床涼み',k:'',parent:'川床',type:'boudai'},
@@ -5261,14 +5261,14 @@ let BOUDAI_NEW = [
   {w:'夏見舞',k:'',parent:'暑中見舞',type:'boudai'},
   {w:'残暑見舞',k:'',parent:'暑中見舞',type:'boudai'},
   {w:'氷白玉',k:'',parent:'白玉',type:'boudai'},
-  {w:'代掻',k:'',parent:'代掻く',type:'boudai'},
-  {w:'田掻く',k:'',parent:'代掻く',type:'boudai'},
-  {w:'田掻馬',k:'',parent:'代掻く',type:'boudai'},
-  {w:'田掻牛',k:'',parent:'代掻く',type:'boudai'},
-  {w:'代馬',k:'',parent:'代掻く',type:'boudai'},
-  {w:'代牛',k:'',parent:'代掻く',type:'boudai'},
-  {w:'田水張る',k:'',parent:'代掻く',type:'boudai'},
-  {w:'代田',k:'',parent:'代掻く',type:'boudai'},
+  {w:'代搔',k:'',parent:'代搔く',type:'boudai'},
+  {w:'田搔く',k:'',parent:'代搔く',type:'boudai'},
+  {w:'田搔馬',k:'',parent:'代搔く',type:'boudai'},
+  {w:'田搔牛',k:'',parent:'代搔く',type:'boudai'},
+  {w:'代馬',k:'',parent:'代搔く',type:'boudai'},
+  {w:'代牛',k:'',parent:'代搔く',type:'boudai'},
+  {w:'田水張る',k:'',parent:'代搔く',type:'boudai'},
+  {w:'代田',k:'',parent:'代搔く',type:'boudai'},
   {w:'白地',k:'',parent:'白絣',type:'boudai'},
   {w:'走り藷',k:'',parent:'新藷',type:'boudai'},
   {w:'走り茶',k:'',parent:'新茶',type:'boudai'},
@@ -5333,19 +5333,19 @@ let BOUDAI_NEW = [
   {w:'真夏日',k:'',parent:'盛夏',type:'boudai'},
   {w:'石あやめ',k:'',parent:'石菖',type:'boudai'},
   {w:'唐撫子',k:'',parent:'石竹',type:'boudai'},
-  {w:'油蝉',k:'',parent:'蝉',type:'boudai'},
-  {w:'みんみん',k:'',parent:'蝉',type:'boudai'},
-  {w:'熊蝉',k:'',parent:'蝉',type:'boudai'},
-  {w:'にいにい蝉',k:'',parent:'蝉',type:'boudai'},
-  {w:'唖蝉',k:'',parent:'蝉',type:'boudai'},
-  {w:'初蝉',k:'',parent:'蝉',type:'boudai'},
-  {w:'朝蝉',k:'',parent:'蝉',type:'boudai'},
-  {w:'夕蝉',k:'',parent:'蝉',type:'boudai'},
-  {w:'夜蝉',k:'',parent:'蝉',type:'boudai'},
-  {w:'蝉時雨',k:'',parent:'蝉',type:'boudai'},
-  {w:'落蝉',k:'',parent:'蝉',type:'boudai'},
-  {w:'蝉',k:'',parent:'蝉',type:'boudai'},
-  {w:'蝉丸祭',k:'',parent:'蝉丸忌',type:'boudai'},
+  {w:'油蟬',k:'',parent:'蟬',type:'boudai'},
+  {w:'みんみん',k:'',parent:'蟬',type:'boudai'},
+  {w:'熊蟬',k:'',parent:'蟬',type:'boudai'},
+  {w:'にいにい蟬',k:'',parent:'蟬',type:'boudai'},
+  {w:'唖蟬',k:'',parent:'蟬',type:'boudai'},
+  {w:'初蟬',k:'',parent:'蟬',type:'boudai'},
+  {w:'朝蟬',k:'',parent:'蟬',type:'boudai'},
+  {w:'夕蟬',k:'',parent:'蟬',type:'boudai'},
+  {w:'夜蟬',k:'',parent:'蟬',type:'boudai'},
+  {w:'蟬時雨',k:'',parent:'蟬',type:'boudai'},
+  {w:'落蟬',k:'',parent:'蟬',type:'boudai'},
+  {w:'蟬',k:'',parent:'蟬',type:'boudai'},
+  {w:'蟬丸祭',k:'',parent:'蟬丸忌',type:'boudai'},
   {w:'をけらたく',k:'',parent:'蒼朮を焚く',type:'boudai'},
   {w:'うけら焼く',k:'',parent:'蒼朮を焚く',type:'boudai'},
   {w:'回り灯籠',k:'',parent:'走馬灯',type:'boudai'},
@@ -5843,8 +5843,8 @@ let BOUDAI_NEW = [
   {w:'秋霜',k:'しゅうそう',parent:'秋の霜',type:'boudai'},
   {w:'露霜',k:'つゆしも',parent:'秋の霜',type:'boudai'},
   {w:'水霜',k:'みずしも',parent:'秋の霜',type:'boudai'},
-  {w:'秋蝉',k:'',parent:'秋の蝉',type:'boudai'},
-  {w:'残る蝉',k:'',parent:'秋の蝉',type:'boudai'},
+  {w:'秋蟬',k:'',parent:'秋の蟬',type:'boudai'},
+  {w:'残る蟬',k:'',parent:'秋の蟬',type:'boudai'},
   {w:'秋空',k:'あきぞら',parent:'秋の空',type:'boudai'},
   {w:'秋の天',k:'あきのてん',parent:'秋の空',type:'boudai'},
   {w:'秋天',k:'しゅうてん',parent:'秋の空',type:'boudai'},
@@ -6594,9 +6594,9 @@ let BOUDAI_NEW = [
   {w:'べつたら漬',k:'',parent:'べつたら市',type:'boudai'},
   {w:'浅漬市',k:'',parent:'べつたら市',type:'boudai'},
   {w:'血止草',k:'',parent:'弁慶草',type:'boudai'},
-  {w:'つくつく法師',k:'',parent:'法師蝉',type:'boudai'},
-  {w:'つくつくし',k:'',parent:'法師蝉',type:'boudai'},
-  {w:'寒蝉',k:'',parent:'法師蝉',type:'boudai'},
+  {w:'つくつく法師',k:'',parent:'法師蟬',type:'boudai'},
+  {w:'つくつくし',k:'',parent:'法師蟬',type:'boudai'},
+  {w:'寒蟬',k:'',parent:'法師蟬',type:'boudai'},
   {w:'つまくれない',k:'',parent:'鳳仙花',type:'boudai'},
   {w:'つまべに',k:'',parent:'鳳仙花',type:'boudai'},
   {w:'出来秋',k:'',parent:'豊年',type:'boudai'},
@@ -6803,7 +6803,7 @@ let BOUDAI_NEW = [
   {w:'をし',k:'',parent:'鴛鴦',type:'boudai'},
   {w:'落葉',k:'',parent:'落葉',type:'boudai'},
   {w:'落葉焚',k:'',parent:'落葉',type:'boudai'},
-  {w:'落葉掻',k:'',parent:'落葉',type:'boudai'},
+  {w:'落葉搔',k:'',parent:'落葉',type:'boudai'},
   {w:'落葉籠',k:'',parent:'落葉',type:'boudai'},
   {w:'落葉期',k:'',parent:'落葉',type:'boudai'},
   {w:'寒雷忌',k:'',parent:'乙字忌',type:'boudai'},
@@ -7149,7 +7149,7 @@ let BOUDAI_NEW = [
   {w:'実千両',k:'',parent:'千両',type:'boudai'},
   {w:'カーディガン',k:'',parent:'セーター',type:'boudai'},
   {w:'梅早し',k:'',parent:'早梅',type:'boudai'},
-  {w:'蕎麦湯',k:'',parent:'蕎麦掻',type:'boudai'},
+  {w:'蕎麦湯',k:'',parent:'蕎麦搔',type:'boudai'},
   {w:'馬橇',k:'',parent:'橇',type:'boudai'},
   {w:'犬橇',k:'',parent:'橇',type:'boudai'},
   {w:'手橇',k:'',parent:'橇',type:'boudai'},
@@ -7555,9 +7555,9 @@ let BOUDAI_NEW = [
   {w:'雪雷',k:'',parent:'雪起し',type:'boudai'},
   {w:'雪の雷',k:'',parent:'雪起し',type:'boudai'},
   {w:'雪卸',k:'',parent:'雪下し',type:'boudai'},
-  {w:'除雪',k:'',parent:'雪掻',type:'boudai'},
-  {w:'除雪車',k:'',parent:'雪掻',type:'boudai'},
-  {w:'ラッセル車',k:'',parent:'雪掻',type:'boudai'},
+  {w:'除雪',k:'',parent:'雪搔',type:'boudai'},
+  {w:'除雪車',k:'',parent:'雪搔',type:'boudai'},
+  {w:'ラッセル車',k:'',parent:'雪搔',type:'boudai'},
   {w:'雪垣',k:'',parent:'雪囲',type:'boudai'},
   {w:'雪構',k:'',parent:'雪囲',type:'boudai'},
   {w:'雪除',k:'',parent:'雪囲',type:'boudai'},
@@ -7583,7 +7583,7 @@ let BOUDAI_NEW = [
   {w:'柚子風呂',k:'',parent:'柚子湯',type:'boudai'},
   {w:'冬至湯',k:'',parent:'柚子湯',type:'boudai'},
   {w:'たんぽ',k:'',parent:'湯婆',type:'boudai'},
-  {w:'掻巻',k:'',parent:'夜着',type:'boudai'},
+  {w:'搔巻',k:'',parent:'夜着',type:'boudai'},
   {w:'小夜着',k:'',parent:'夜着',type:'boudai'},
   {w:'夜鳴蕎麦',k:'',parent:'夜鷹蕎麦',type:'boudai'},
   {w:'夜鳴うどん',k:'',parent:'夜鷹蕎麦',type:'boudai'},
