--- a/index.html
+++ b/index.html
@@ -4779,123 +4779,121 @@ let BOUDAI_NEW = [
 {w:'鰺売',k:'あじうり',parent:'鰺',type:'boudai'},
   {w:'四葩',k:'よひら',parent:'紫陽花',type:'boudai'},
   {w:'七変化',k:'しちへんげ',parent:'紫陽花',type:'boudai'},
-  {w:'鮎刺',k:'',parent:'鰺刺',type:'boudai'},
-  {w:'鮎鷹',k:'',parent:'鰺刺',type:'boudai'},
-  {w:'汗ばむ',k:'',parent:'汗',type:'boudai'},
-  {w:'玉の汗',k:'',parent:'汗',type:'boudai'},
-  {w:'汗疹',k:'',parent:'汗',type:'boudai'},
-  {w:'汗水',k:'',parent:'汗',type:'boudai'},
-  {w:'汗みどろ',k:'',parent:'汗',type:'boudai'},
-  {w:'ハンカチーフ',k:'',parent:'ハンカチ',type:'boudai'},
-  {w:'ハンケチ',k:'',parent:'ハンカチ',type:'boudai'},
-  {w:'汗ふき',k:'',parent:'ハンカチ',type:'boudai'},
-  {w:'汗手拭',k:'',parent:'ハンカチ',type:'boudai'},
-  {w:'あせぼ',k:'',parent:'汗疹',type:'boudai'},
-  {w:'暑さ',k:'',parent:'暑し',type:'boudai'},
-  {w:'暑',k:'',parent:'暑し',type:'boudai'},
-  {w:'暑気',k:'',parent:'暑し',type:'boudai'},
-  {w:'炎暑',k:'',parent:'暑し',type:'boudai'},
-  {w:'炎ゆ',k:'',parent:'暑し',type:'boudai'},
-  {w:'熱帯夜',k:'',parent:'暑し',type:'boudai'},
-  {w:'海鰻',k:'あなご／うみうなぎ',parent:'穴子',type:'boudai'},
-  {w:'脂照',k:'',parent:'油照',type:'boudai'},
-  {w:'枝蛙',k:'',parent:'雨蛙',type:'boudai'},
-  {w:'青蛙',k:'',parent:'雨蛙',type:'boudai'},
-  {w:'夏蛙',k:'',parent:'雨蛙',type:'boudai'},
-  {w:'祈雨',k:'',parent:'雨乞',type:'boudai'},
-  {w:'雨の祈',k:'',parent:'雨乞',type:'boudai'},
-  {w:'一夜酒',k:'',parent:'甘酒',type:'boudai'},
-  {w:'網障子',k:'',parent:'網戸',type:'boudai'},
-  {w:'あめんばう',k:'',parent:'水馬',type:'boudai'},
-  {w:'みずすまし',k:'',parent:'水馬',type:'boudai'},
-  {w:'水蜘蛛',k:'',parent:'水馬',type:'boudai'},
-  {w:'香魚',k:'',parent:'鮎',type:'boudai'},
-  {w:'年魚',k:'',parent:'鮎',type:'boudai'},
-  {w:'鮎の宿',k:'',parent:'鮎',type:'boudai'},
-  {w:'鮎漁',k:'',parent:'鮎釣',type:'boudai'},
-  {w:'囮鮎',k:'',parent:'鮎釣',type:'boudai'},
-  {w:'鮎釣解禁',k:'',parent:'鮎釣',type:'boudai'},
-  {w:'川明',k:'',parent:'鮎釣',type:'boudai'},
-  {w:'鮎狩',k:'',parent:'鮎釣',type:'boudai'},
-  {w:'洗鯉',k:'',parent:'洗膾',type:'boudai'},
-  {w:'洗鱸',k:'',parent:'洗膾',type:'boudai'},
-  {w:'洗鯛',k:'',parent:'洗膾',type:'boudai'},
-  {w:'生作り',k:'',parent:'洗膾',type:'boudai'},
-  {w:'黒菜',k:'',parent:'荒布',type:'boudai'},
-  {w:'荒布刈る',k:'',parent:'荒布',type:'boudai'},
-  {w:'荒布干す',k:'',parent:'荒布',type:'boudai'},
-  {w:'山蟻',k:'',parent:'蟻',type:'boudai'},
-  {w:'蟻の道',k:'',parent:'蟻',type:'boudai'},
-  {w:'蟻の塔',k:'',parent:'蟻',type:'boudai'},
-  {w:'蟻塚',k:'',parent:'蟻',type:'boudai'},
-  {w:'蟻の列',k:'',parent:'蟻',type:'boudai'},
-  {w:'蟻の門渡り',k:'',parent:'蟻',type:'boudai'},
-  {w:'あとすざり',k:'',parent:'蟻地獄',type:'boudai'},
-  {w:'擂鉢虫',k:'',parent:'蟻地獄',type:'boudai'},
-  {w:'あとさり虫',k:'',parent:'蟻地獄',type:'boudai'},
-  {w:'素袷',k:'',parent:'袷',type:'boudai'},
-  {w:'初袷',k:'',parent:'袷',type:'boudai'},
-  {w:'綿抜',k:'',parent:'袷',type:'boudai'},
-  {w:'古袷',k:'',parent:'袷',type:'boudai'},
-  {w:'鮑取',k:'',parent:'鮑',type:'boudai'},
-  {w:'鮑海女',k:'',parent:'鮑',type:'boudai'},
-  {w:'夏安居',k:'',parent:'安居',type:'boudai'},
-  {w:'雨安居',k:'',parent:'安居',type:'boudai'},
-  {w:'夏げ',k:'',parent:'安居',type:'boudai'},
-  {w:'一夏',k:'',parent:'安居',type:'boudai'},
-  {w:'夏行',k:'',parent:'安居',type:'boudai'},
-  {w:'夏籠',k:'',parent:'安居',type:'boudai'},
-  {w:'夏断',k:'',parent:'安居',type:'boudai'},
-  {w:'夏入',k:'',parent:'安居',type:'boudai'},
-  {w:'結夏',k:'',parent:'安居',type:'boudai'},
-  {w:'解夏',k:'',parent:'安居',type:'boudai'},
-  {w:'夏百合',k:'',parent:'安居',type:'boudai'},
-  {w:'夏書',k:'',parent:'安居',type:'boudai'},
-  {w:'夏花',k:'',parent:'安居',type:'boudai'},
-  {w:'杏子',k:'',parent:'杏',type:'boudai'},
-  {w:'からもも',k:'',parent:'杏',type:'boudai'},
-  {w:'杏の実',k:'',parent:'杏',type:'boudai'},
-  {w:'烏賊釣火',k:'',parent:'烏賊釣',type:'boudai'},
-  {w:'烏賊火',k:'',parent:'烏賊釣',type:'boudai'},
-  {w:'烏賊釣舟',k:'',parent:'烏賊釣',type:'boudai'},
-  {w:'藺草刈',k:'',parent:'藺刈',type:'boudai'},
-  {w:'藺干す',k:'',parent:'藺刈',type:'boudai'},
-  {w:'藺車',k:'',parent:'藺刈',type:'boudai'},
-  {w:'紅虎杖',k:'',parent:'虎杖の花',type:'boudai'},
-  {w:'一八',k:'',parent:'鳶尾草',type:'boudai'},
-  {w:'紫羅傘（いちはつ）',k:'',parent:'鳶尾草',type:'boudai'},
-  {w:'厳島祭',k:'',parent:'厳島管絃祭',type:'boudai'},
-  {w:'糸引',k:'',parent:'糸取',type:'boudai'},
-  {w:'糸取鍋',k:'',parent:'糸取',type:'boudai'},
-  {w:'糸取女',k:'',parent:'糸取',type:'boudai'},
-  {w:'糸取歌',k:'',parent:'糸取',type:'boudai'},
-  {w:'燈心蜻蛉',k:'',parent:'糸蜻蛉',type:'boudai'},
-  {w:'とうずみ蜻蛉',k:'',parent:'糸蜻蛉',type:'boudai'},
-  {w:'とうすみ',k:'',parent:'糸蜻蛉',type:'boudai'},
-  {w:'藺草',k:'',parent:'藺の花',type:'boudai'},
-  {w:'燈心草',k:'',parent:'藺の花',type:'boudai'},
-  {w:'燈心草の花',k:'',parent:'藺の花',type:'boudai'},
-  {w:'藺田',k:'',parent:'藺の花',type:'boudai'},
-  {w:'嘉魚',k:'',parent:'岩魚',type:'boudai'},
-  {w:'巌魚',k:'',parent:'岩魚',type:'boudai'},
-  {w:'岩魚釣',k:'',parent:'岩魚',type:'boudai'},
-  {w:'海鵜',k:'',parent:'鵜',type:'boudai'},
-  {w:'河鵜',k:'',parent:'鵜',type:'boudai'},
-  {w:'徒歩鵜',k:'',parent:'鵜飼',type:'boudai'},
-  {w:'鵜匠',k:'',parent:'鵜飼',type:'boudai'},
-  {w:'鵜遣',k:'',parent:'鵜飼',type:'boudai'},
-  {w:'鵜縄',k:'',parent:'鵜飼',type:'boudai'},
-  {w:'荒鵜',k:'',parent:'鵜飼',type:'boudai'},
-  {w:'疲れ鵜',k:'',parent:'鵜飼',type:'boudai'},
-  {w:'鵜籠',k:'',parent:'鵜飼',type:'boudai'},
-  {w:'鵜舟',k:'',parent:'鵜飼',type:'boudai'},
-  {w:'鵜篝',k:'',parent:'鵜飼',type:'boudai'},
-  {w:'浮草',k:'',parent:'萍',type:'boudai'},
-  {w:'根無草',k:'',parent:'萍',type:'boudai'},
-  {w:'萍の花',k:'',parent:'萍',type:'boudai'},
-  {w:'鳰の浮巣',k:'',parent:'浮巣',type:'boudai'},
-  {w:'鳰の巣',k:'',parent:'浮巣',type:'boudai'},
-  {w:'浮いて来い',k:'',parent:'浮人形',type:'boudai'},
+  {w:'鮎刺',k:'あゆさし',parent:'鯵刺',type:'boudai'},
+{w:'鮎鷹',k:'あゆたか',parent:'鯵刺',type:'boudai'},
+{w:'汗ばむ',k:'あせばむ',parent:'汗',type:'boudai'},
+{w:'玉の汗',k:'たまのあせ',parent:'汗',type:'boudai'},
+{w:'汗疹',k:'あせも',parent:'汗',type:'boudai'},
+{w:'汗水',k:'あせみず',parent:'汗',type:'boudai'},
+{w:'汗みどろ',k:'あせみどろ',parent:'汗',type:'boudai'},
+{w:'ハンカチーフ',k:'はんかちーふ',parent:'ハンカチ',type:'boudai'},
+{w:'ハンケチ',k:'はんけち',parent:'ハンカチ',type:'boudai'},
+{w:'汗ふき',k:'あせふき',parent:'ハンカチ',type:'boudai'},
+{w:'汗手拭',k:'あせてぬぐい',parent:'ハンカチ',type:'boudai'},
+{w:'あせぼ',k:'あせぼ',parent:'汗疹',type:'boudai'},
+{w:'暑さ',k:'あきのあつさ',parent:'暑し',type:'boudai'},
+{w:'暑',k:'しょき',parent:'暑し',type:'boudai'},
+{w:'暑気',k:'しょき',parent:'暑し',type:'boudai'},
+{w:'炎暑',k:'えんしょ',parent:'暑し',type:'boudai'},
+{w:'炎ゆ',k:'もゆ',parent:'暑し',type:'boudai'},
+{w:'熱帯夜',k:'ねったいや',parent:'暑し',type:'boudai'},  {w:'海鰻',k:'あなご／うみうなぎ',parent:'穴子',type:'boudai'},
+ {w:'脂照',k:'あぶらてり',parent:'油照',type:'boudai'},
+{w:'枝蛙',k:'えだかわず',parent:'雨蛙',type:'boudai'},
+{w:'青蛙',k:'あおがえる',parent:'雨蛙',type:'boudai'},
+{w:'夏蛙',k:'なつがえる',parent:'雨蛙',type:'boudai'},
+{w:'祈雨',k:'きう',parent:'雨乞',type:'boudai'},
+{w:'雨の祈',k:'あめのいのり',parent:'雨乞',type:'boudai'},
+{w:'一夜酒',k:'ひとよざけ',parent:'甘酒',type:'boudai'},
+{w:'網障子',k:'あみしょうじ',parent:'網戸',type:'boudai'},
+{w:'あめんばう',k:'あめんぼう',parent:'水馬',type:'boudai'},
+{w:'みずすまし',k:'みずすまし',parent:'水馬',type:'boudai'},
+{w:'水蜘蛛',k:'みずぐも',parent:'水馬',type:'boudai'},
+{w:'香魚',k:'こうぎょ',parent:'鮎',type:'boudai'},
+{w:'年魚',k:'ねんぎょ',parent:'鮎',type:'boudai'},
+{w:'鮎の宿',k:'あゆのやど',parent:'鮎',type:'boudai'},
+{w:'鮎漁',k:'あゆりょう',parent:'鮎釣',type:'boudai'},
+{w:'囮鮎',k:'おとりあゆ',parent:'鮎釣',type:'boudai'},
+{w:'鮎釣解禁',k:'あゆりょうかいきん',parent:'鮎釣',type:'boudai'},
+{w:'川明',k:'かわあき／かわあけ',parent:'鮎釣',type:'boudai'},
+{w:'鮎狩',k:'あゆがり',parent:'鮎釣',type:'boudai'},
+{w:'洗鯉',k:'あらいごい',parent:'洗膾',type:'boudai'},
+{w:'洗鱸',k:'あらいすずき',parent:'洗膾',type:'boudai'},
+{w:'洗鯛',k:'あらいたい',parent:'洗膾',type:'boudai'},
+{w:'生作り',k:'いきづくり',parent:'洗膾',type:'boudai'},
+{w:'黒菜',k:'くろめ',parent:'荒布',type:'boudai'},
+{w:'荒布刈る',k:'あらめかる',parent:'荒布',type:'boudai'},
+{w:'荒布干す',k:'あらめほす',parent:'荒布',type:'boudai'},
+{w:'山蟻',k:'やまあり',parent:'蟻',type:'boudai'},
+{w:'蟻の道',k:'ありのみち',parent:'蟻',type:'boudai'},
+{w:'蟻の塔',k:'ありのとう',parent:'蟻',type:'boudai'},
+{w:'蟻塚',k:'ありづか',parent:'蟻',type:'boudai'},
+{w:'蟻の列',k:'ありのれつ',parent:'蟻',type:'boudai'},
+{w:'蟻の門渡り',k:'ありのとわたり',parent:'蟻',type:'boudai'},
+{w:'あとすざり',k:'あとずさり',parent:'蟻地獄',type:'boudai'},
+{w:'擂鉢虫',k:'すりばちむし',parent:'蟻地獄',type:'boudai'},
+{w:'あとさり虫',k:'あとさりむし',parent:'蟻地獄',type:'boudai'},
+{w:'素袷',k:'すあわせ',parent:'袷',type:'boudai'},
+{w:'初袷',k:'はつあわせ',parent:'袷',type:'boudai'},
+{w:'綿抜',k:'わたぬき',parent:'袷',type:'boudai'},
+{w:'古袷',k:'ふるあわせ',parent:'袷',type:'boudai'},
+{w:'鮑取',k:'あわびとり',parent:'鮑',type:'boudai'},
+{w:'鮑海女',k:'あわびあま',parent:'鮑',type:'boudai'},
+{w:'夏安居',k:'げあんご',parent:'安居',type:'boudai'},
+{w:'雨安居',k:'うあんご',parent:'安居',type:'boudai'},
+{w:'夏げ',k:'なつげ',parent:'安居',type:'boudai'},
+{w:'一夏',k:'いちげ',parent:'安居',type:'boudai'},
+{w:'夏行',k:'げぎょう',parent:'安居',type:'boudai'},
+{w:'夏籠',k:'げごもり',parent:'安居',type:'boudai'},
+{w:'夏断',k:'げだち',parent:'安居',type:'boudai'},
+{w:'夏入',k:'げいり',parent:'安居',type:'boudai'},
+{w:'結夏',k:'けつげ',parent:'安居',type:'boudai'},
+{w:'解夏',k:'げげ',parent:'安居',type:'boudai'},
+{w:'夏百日',k:'げひゃくにち',parent:'安居',type:'boudai'},
+{w:'夏書',k:'げがき',parent:'安居',type:'boudai'},
+{w:'夏花',k:'げばな',parent:'安居',type:'boudai'},
+{w:'杏子',k:'あんず',parent:'杏',type:'boudai'},
+{w:'からもも',k:'からもも',parent:'杏',type:'boudai'},
+{w:'杏の実',k:'いちょうのみ',parent:'杏',type:'boudai'},
+{w:'烏賊釣火',k:'いかつりび',parent:'烏賊釣',type:'boudai'},
+{w:'烏賊火',k:'いかび',parent:'烏賊釣',type:'boudai'},
+{w:'烏賊釣舟',k:'いかつりぶね',parent:'烏賊釣',type:'boudai'},
+{w:'藺草刈',k:'いぐさかり',parent:'藺刈',type:'boudai'},
+{w:'藺干す',k:'いほす',parent:'藺刈',type:'boudai'},
+{w:'藺車',k:'いぐるま',parent:'藺刈',type:'boudai'},
+{w:'紅虎杖',k:'べにいたどり',parent:'虎杖の花',type:'boudai'},
+{w:'一八',k:'いちはつ',parent:'鳶尾草',type:'boudai'},
+{w:'紫羅傘',k:'いちはつ',parent:'鳶尾草',type:'boudai'},
+{w:'厳島祭',k:'いつくしままつり',parent:'厳島管絃祭',type:'boudai'},
+{w:'糸引',k:'いとひき',parent:'糸取',type:'boudai'},
+{w:'糸取鍋',k:'いととりなべ',parent:'糸取',type:'boudai'},
+{w:'糸取女',k:'いととりめ',parent:'糸取',type:'boudai'},
+ {w:'糸取歌',k:'いととりうた',parent:'糸取',type:'boudai'},
+{w:'灯心蜻蛉',k:'とうしんとんぼ',parent:'糸蜻蛉',type:'boudai'},
+{w:'とうすみ蜻蛉',k:'とうすみとんぼ',parent:'糸蜻蛉',type:'boudai'},
+{w:'とうすみ',k:'とうすみ',parent:'糸蜻蛉',type:'boudai'},
+{w:'藺草',k:'いぐさ',parent:'藺の花',type:'boudai'},
+{w:'灯心草',k:'とうしんぐさ',parent:'藺の花',type:'boudai'},
+{w:'藺田',k:'いだ',parent:'藺の花',type:'boudai'},
+{w:'嘉魚',k:'かぎょ',parent:'岩魚',type:'boudai'},
+{w:'巌魚',k:'いわな',parent:'岩魚',type:'boudai'},
+{w:'岩魚釣',k:'いわなつり',parent:'岩魚',type:'boudai'},
+{w:'海鵜',k:'うみう',parent:'鵜',type:'boudai'},
+{w:'河鵜',k:'かわう',parent:'鵜',type:'boudai'},
+{w:'徒歩鵜',k:'かちう',parent:'鵜飼',type:'boudai'},
+{w:'鵜匠',k:'うしょう',parent:'鵜飼',type:'boudai'},
+{w:'鵜遣',k:'うつかい',parent:'鵜飼',type:'boudai'},
+{w:'鵜縄',k:'うなわ',parent:'鵜飼',type:'boudai'},
+{w:'荒鵜',k:'あらう',parent:'鵜飼',type:'boudai'},
+{w:'疲れ鵜',k:'つかれう',parent:'鵜飼',type:'boudai'},
+{w:'鵜籠',k:'うかご',parent:'鵜飼',type:'boudai'},
+{w:'鵜舟',k:'うぶね',parent:'鵜飼',type:'boudai'},
+{w:'鵜篝',k:'うかがり',parent:'鵜飼',type:'boudai'},
+{w:'浮草',k:'うきくさ',parent:'萍',type:'boudai'},
+{w:'根無草',k:'ねなしぐさ',parent:'萍',type:'boudai'},
+{w:'萍の花',k:'うきくさのはな',parent:'萍',type:'boudai'},
+{w:'鳰の浮巣',k:'におのうきす',parent:'浮巣',type:'boudai'},
+{w:'鳰の巣',k:'におのす',parent:'浮巣',type:'boudai'},
+{w:'浮いて来い',k:'ういてこい',parent:'浮人形',type:'boudai'},
   {w:'絽',k:'ろ',parent:'羅',type:'boudai'},
   {w:'紗',k:'しゃ',parent:'羅',type:'boudai'},
   {w:'軽羅',k:'けいら',parent:'羅',type:'boudai'},
