--- a/index.html
+++ b/index.html
@@ -1610,7 +1610,7 @@ let RAW = [
   {w:'海月',k:'くらげ',s:'夏',p:'三夏',c:'動物'},
   {w:'兜虫',k:'かぶとむし',s:'夏',p:'三夏',c:'動物'},
   {w:'天道虫',k:'てんとうむし',s:'夏',p:'三夏',c:'動物'},
-  {w:'糸蜻蛉',k:'いとかげろう',s:'夏',p:'三夏',c:'動物'},
+  {w:'糸蜻蛉',k:'いととんぼ',s:'夏',p:'三夏',c:'動物'},
   {w:'蟻',k:'あり',s:'夏',p:'三夏',c:'動物'},
   {w:'蚊',k:'か',s:'夏',p:'三夏',c:'動物'},
   {w:'蝸牛',k:'かたつむり',s:'夏',p:'三夏',c:'動物'},
